--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -522,3 +522,7 @@ table a, #comments a{background-color:inherit;}
 	.hoc.split{max-width:none; width:100%;}
 	.split section{float:none; width:100%; padding:10% 5%;}
 }
+
+h2 {
+	text-align: center;
+}
