--- a/views/shopping/index.ejs
+++ b/views/shopping/index.ejs
@@ -1,7 +1,7 @@
 <h> Wanna sell something?</h>
 <a class="btn btn-lg btn-primary btn-block" href="/shopping/sell">Click here !!</a>
 
-<h2>Product Table</h2>
+<h2>Shop</h2>
 
 <table class="table">
   <thead>
@@ -45,17 +45,3 @@
     <% }); %>
   </tbody>
 </table>
-
-<ul class="gallery">
-  <% products.forEach(product => { %>
-  <li>
-    <p>test</p>
-    <img src="./images/nikeGolf.jpg" alt="">
-  </li>
-  <div class="pic-tile">
-    <li>
-      <p>test</p>
-      <img src="./images/nikeGolf.jpg" alt="">
-    </li>
-  </div>
-  <% });%>
