--- a/views/bidding/index.ejs
+++ b/views/bidding/index.ejs
@@ -1,7 +1,7 @@
 <h> Wanna put something for auction</h>
-<a href="/bidding/sell">Click here !!</a>
+<a class="btn btn-lg btn-primary btn-block" href="/bidding/sell">Click here !!</a>
 
-<h2>Product Table</h2>
+<h2>Auction</h2>
 
 <table class="table">
   <thead>
@@ -14,6 +14,7 @@
       <th>Time left</th>
       <th>Last Bidder</th>
       <th>Category</th>
+      <th>Place Bid</th>
     </tr>
   </thead>
   <tbody>
